# HarTex-rust-discord-bot

./: .codespellrc  .dockerignore  .env.example  .gitignore  CHANGELOG.md  hartex.example.conf  x.py
api-backend/hartex-backend-driver/: Cargo.toml
api-backend/hartex-backend-driver/src/: main.rs
api-backend/hartex-backend-extractors/: Cargo.toml
api-backend/hartex-backend-extractors/src/: lib.rs
api-backend/hartex-backend-models/: Cargo.toml
api-backend/hartex-backend-models/src/: lib.rs  uptime.rs
api-backend/hartex-backend-routes/: Cargo.toml
api-backend/hartex-backend-routes/src/: lib.rs  uptime.rs
database/hartex-database-migrate/: Cargo.toml  build.rs
database/hartex-database-migrate/configuration-migrations/: V1__init.sql
database/hartex-database-migrate/src/: main.rs
database/hartex-database-queries/: Cargo.toml  build.rs
database/hartex-database-queries/queries/api_backend/: start_timestamp_select_by_component.sql  start_timestamp_upsert.sql
database/hartex-database-queries/queries/configuration/: plugin_enabled.sql
database/hartex-database-queries/queries/discord_frontend/: cached_emoji_select_by_guild_id.sql  cached_emoji_select_by_id.sql  cached_emoji_upsert.sql  cached_guild_select_by_id.sql  cached_guild_upsert.sql  cached_member_select_by_guild_id.sql  cached_member_select_by_user_id_and_guild_id.sql  cached_member_upsert.sql  cached_role_select_by_guild_id.sql  cached_role_select_by_id_and_guild_id.sql  cached_role_upsert.sql  cached_user_select_by_id.sql  cached_user_upsert.sql
database/hartex-database-queries/schemas/: api_backend.sql  configuration.sql  discord_frontend.sql
database/hartex-database-queries/src/: internal.rs  lib.rs  result.rs
database/hartex-database-queries/src/queries/api_backend/: mod.rs  start_timestamp_select_by_component.rs  start_timestamp_upsert.rs
database/hartex-database-queries/src/queries/configuration/: mod.rs  plugin_enabled.rs
database/hartex-database-queries/src/queries/discord_frontend/: cached_emoji_select_by_guild_id.rs  cached_emoji_select_by_id.rs  cached_emoji_upsert.rs  cached_guild_select_by_id.rs  cached_guild_upsert.rs  cached_member_select_by_guild_id.rs  cached_member_select_by_user_id_and_guild_id.rs  cached_member_upsert.rs  mod.rs  (+5 more)
database/hartex-database-queries/src/tables/: api_backend.rs  configuration.rs  discord_frontend.rs  mod.rs
database/hartex-database-typedsql/: Cargo.toml
database/hartex-database-typedsql/src/: error.rs  lib.rs  query.rs  schema.rs  visitor.rs
database/hartex-database-typedsql/src/codegen/: library.rs  mod.rs  queries.rs  result.rs  tables.rs  types.rs
database/hartex-database-typedsql/src/query/: insert.rs  mod.rs  select.rs  types.rs
discord-frontend/hartex-discord-commands-core/: Cargo.toml
discord-frontend/hartex-discord-commands-core/src/: lib.rs  traits.rs
discord-frontend/hartex-discord-commands-macros/: Cargo.toml
discord-frontend/hartex-discord-commands-macros/src/: commandmetadata.rs  lib.rs  pluginmetadata.rs
discord-frontend/hartex-discord-commands-manager/: Cargo.toml
discord-frontend/hartex-discord-commands-manager/src/: cmdline.rs  main.rs
discord-frontend/hartex-discord-commands-manager/src/commands/: list_from_discord.rs  list_from_fs.rs  mod.rs  patch.rs  register.rs  unregister.rs
discord-frontend/hartex-discord-commands-manager/src/model/: command.rs  mod.rs
discord-frontend/hartex-discord-configuration-luart/: Cargo.toml
discord-frontend/hartex-discord-configuration-luart/src/: lib.rs
discord-frontend/hartex-discord-configuration-luart/tests/: parse.rs
discord-frontend/hartex-discord-configuration-models/: Cargo.toml
discord-frontend/hartex-discord-configuration-models/src/: appearance.rs  dashboard.rs  eventflags.rs  lib.rs
discord-frontend/hartex-discord-configuration-models/src/plugins/: management.rs  mod.rs  utilities.rs
discord-frontend/hartex-discord-entitycache-core/: Cargo.toml
discord-frontend/hartex-discord-entitycache-core/src/: error.rs  lib.rs  traits.rs
discord-frontend/hartex-discord-entitycache-macros/: Cargo.toml  build.rs
discord-frontend/hartex-discord-entitycache-macros/src/: entity.rs  lib.rs  reflect.rs  typeext.rs
discord-frontend/hartex-discord-entitycache-macros2/: Cargo.toml  build.rs
discord-frontend/hartex-discord-entitycache-macros2/src/: lib.rs
discord-frontend/hartex-discord-entitycache-service/: Cargo.toml
discord-frontend/hartex-discord-entitycache-service/src/: entitycache.rs  main.rs
discord-frontend/hartex-discord-internal-events/: Cargo.toml
discord-frontend/hartex-discord-internal-events/src/: lib.rs
discord-frontend/hartex-discord-leader/: Cargo.toml
discord-frontend/hartex-discord-leader/src/: kafka.rs  main.rs  queue.rs  shards.rs
rust-utilities/hartex-bitflags-utils/: Cargo.toml
rust-utilities/hartex-bitflags-utils/src/: lib.rs
rust-utilities/hartex-discord-utils/: Cargo.toml
rust-utilities/hartex-discord-utils/src/: commands.rs  hyper.rs  interaction.rs  lib.rs  markdown.rs  postgres.rs
rust-utilities/hartex-discord-utils/src/localizable/: bool.rs  mod.rs
rust-utilities/hartex-kafka-utils/: Cargo.toml
rust-utilities/hartex-kafka-utils/src/: lib.rs  traits.rs  types.rs
rust-utilities/hartex-macro-utils/: Cargo.toml
rust-utilities/hartex-macro-utils/src/: lib.rs
rust-utilities/hartex-reflect/: Cargo.toml
rust-utilities/hartex-reflect/src/: lib.rs  rustc.rs
tools/bootstrap/: Cargo.toml  bootstrap.py  build.rs  builder.py  cmdrunner.py
tools/bootstrap/config/: fleet-settings.json  vscode-settings.json  zed-settings.json
tools/bootstrap/profiles/: hartex.api.conf  hartex.discord.conf  hartex.hosting.conf  hartex.localization.conf
tools/bootstrap/src/: build.rs  builder.rs  lib.rs
tools/bootstrap/src/config/: flags.rs  ini.rs  mod.rs
tools/bootstrap/src/steps/: build.rs  check.rs  clean.rs  clippy.rs  mod.rs  setup.rs  test.rs
tools/testsuite/: Cargo.toml  build.rs
tools/testsuite/src/: config.rs  flags.rs  header.rs  lib.rs  tests.rs
tools/testsuite/src/testrunner/: context.rs  diff.rs  mod.rs
(+154 files in other folders)
