[package]
name = "hartex_backend_driver"
version = "0.13.0"
edition = "2024"
description = """
Backend server driver
"""
license = "AGPL-3.0-or-later"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_backend_routes = { path = "../hartex-backend-routes" }

hartex_errors = { path = "../../rust-utilities/hartex-errors" }
hartex_log = { path = "../../rust-utilities/hartex-log" }

axum = "0.7.7"
bb8-postgres = "0.9.0"
dotenvy = "0.15.7"
hyper = { version = "1.4.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.9", features = ["http1", "tokio"] }
miette = { version = "7.2.0", features = ["fancy"] }
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["timeout", "trace"] }
tower-service = "0.3.3"
tracing = { version = "0.1.40", features = ["log-always"] }
utoipa = "5.1.3"
utoipa-axum = "0.1.2"
utoipa-scalar = { version = "0.2.0", features = ["axum"] }

[features]
