[package]
name = "hartex_backend_driver"
version = "0.14.0"
edition = "2024"
description = """
Backend server driver
"""
license = "AGPL-3.0-or-later"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_backend_routes = { path = "../hartex-backend-routes" }

hartex_errors = { path = "../../rust-utilities/hartex-errors" }
hartex_log = { path = "../../rust-utilities/hartex-log" }

axum = "0.8.1"
bb8-postgres = "0.9.0"
dotenvy = "0.15.7"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.10", features = ["http1", "tokio"] }
miette = { version = "7.5.0", features = ["fancy"] }
serde = "1.0.218"
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
tower-service = "0.3.3"
tracing = { version = "0.1.41", features = ["log-always"] }
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[features]
