[package]
name = "hartex_backend_extractors"
version = "0.13.0"
edition = "2021"
description = """
Backend extractors
"""
license = "AGPL-3.0-or-later"
rust-version = "1.83.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
