[package]
name = "hartex_backend_models"
version = "0.14.0"
edition = "2024"
description = """
Backend routes (API v1)
"""
license = "AGPL-3.0-or-later"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_discord_configuration_models = { path = "../../discord-frontend/hartex-discord-configuration-models" }

axum = "0.8.1"
either = { version = "1.13.0", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
utoipa = "5.3.1"
utoipa-axum = "0.2.0"

[features]
