[package]
name = "hartex_backend_routes"
version = "0.14.0"
edition = "2024"
description = """
Backend routes (API v1)
"""
license = "AGPL-3.0-or-later"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_backend_models = { path = "../hartex-backend-models" }

hartex_database_queries = { path = "../../database/hartex-database-queries" }

hartex_log = { path = "../../rust-utilities/hartex-log" }

axum = { version = "0.7.7", features = ["json", "macros"] }
axum-extra = "0.9.4"
bb8-postgres = "0.9.0"
futures-util = "0.3.31"
serde_json = "1.0.128"
time = "0.3.36"
utoipa = "5.1.3"

[features]
