[package]
name = "hartex_database_migrate"
version = "0.14.0"
edition = "2024"
description = """
Database migrations.
"""
license = "AGPL-3.0-or-later"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_log = { path = "../../rust-utilities/hartex-log" }

barrel = { version = "0.7.0", features = ["pg"] }
dotenvy = "0.15.7"
miette = { version = "7.5.0", features = ["fancy"] }
refinery = { version = "0.8.16", features = ["tokio-postgres"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.13"
