[package]
name = "hartex_database_queries"
version = "0.14.0"
edition = "2024"
description = """
Database queries generated for use in Rust code in HarTex.
"""
license = "AGPL-3.0-or-later"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
itertools = "0.14.0"
tokio = { version = "1.43.0", features = ["full"] }
wtx = { git = "https://github.com/TeamHarTex/wtx.git", features = [
    "chrono",
    "database",
    "postgres",
    "std",
    "tokio",
] }

[build-dependencies]
hartex_database_typedsql = { path = "../hartex-database-typedsql" }
