[package]
name = "hartex_database_typedsql"
version = "0.14.0"
edition = "2024"
description = """
A typed Rust code generator from SQL queries and schema.
"""
license = "AGPL-3.0-or-later"
rust-version = "1.86.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
sqlparser = "0.54.0"
walkdir = "2.5.0"

[build-dependencies]
