[package]
name = "hartex_database_typedsql"
version = "0.14.0"
edition = "2024"
description = """
A typed Rust code generator from SQL queries and schema.
"""
license = "AGPL-3.0-or-later"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.8.0"
itertools = "0.14.0"
prettyplease = "0.2.29"
proc-macro2 = "1.0.94"
quote = "1.0.39"
sqlparser = { version = "0.55.0", features = ["visitor"] }
syn = { version = "2.0.99", features = ["parsing", "proc-macro"] }
walkdir = "2.5.0"

[build-dependencies]
