[package]
name = "hartex_discord_commands_core"
version = "0.14.0"
edition = "2024"
description = """
Core framework for commands.
"""
license = "AGPL-3.0-or-later"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_discord_core = { path = "../hartex-discord-core", features = [
    "discord-model",
] }
hartex_discord_commands_macros = { path = "../hartex-discord-commands-macros", optional = true }
hartex_discord_configuration_provider = { path = "../hartex-discord-configuration-provider" }

hartex_localization_core = { path = "../../localization/hartex-localization-core" }

async-trait = "0.1.87"
miette = "7.5.0"

[features]
derive = ["dep:hartex_discord_commands_macros"]
