[package]
name = "hartex_discord_commands_macros"
version = "0.14.0"
edition = "2024"
description = """
Macros for the command framework.
"""
license = "AGPL-3.0-or-later"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["extra-traits", "full"] }

[features]

[lib]
name = "hartex_discord_commands_macros"
proc-macro = true
