[package]
name = "hartex_discord_commands_manager"
version = "0.14.0"
edition = "2024"
description = """
The commands manager of the bot.
"""
license = "AGPL-3.0-or-later"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_discord_core = { path = "../hartex-discord-core", features = [
    "async-net",
    "async-runtime",
    "discord-model",
    "environment",
] }

hartex_discord_utils = { path = "../../rust-utilities/hartex-discord-utils" }
hartex_log = { path = "../../rust-utilities/hartex-log" }

clap = "4.5.31"
hyper = { version = "1.6.0", features = ["client", "http1"] }
hyper-trust-dns = { version = "0.5.0", features = ["native-tls"] }
hyper-util = { version = "0.1.10", features = ["http1", "tokio"] }
http-body-util = "0.1.2"
miette = { version = "7.5.0", features = ["fancy"] }
minify = "1.3.0"
owo-colors = "4.2.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"

[features]
