[package]
name = "hartex_discord_configuration_luart"
version = "0.14.0"
edition = "2024"
description = """
Lua runtime for evaluating configurations.
"""
license = "AGPL-3.0-or-later"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_discord_configuration_models = { path = "../hartex-discord-configuration-models" }

mlua = { version = "0.10.3", features = ["lua54", "vendored"] }

[dev-dependencies]
expect-test = "1.5.1"

[features]
