[package]
name = "hartex_discord_configuration_models"
version = "0.14.0"
edition = "2024"
description = """
The worker component of the bot.
"""
license = "AGPL-3.0-or-later"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_discord_core = { path = "../hartex-discord-core", features = [
    "discord-model",
] }

hartex_bitflags_utils = { path = "../../rust-utilities/hartex-bitflags-utils" }

bitflags = { version = "2.8.0", features = ["serde"] }
itertools = "0.14.0"
mlua = { version = "0.10.3", features = ["lua54", "vendored"] }
serde = { version = "1.0.218", features = ["derive"] }

[features]
