[package]
name = "hartex_discord_entitycache_core"
version = "0.14.0"
edition = "2024"
description = """
The core components of the repository cache middleware for HarTex.
"""
license = "AGPL-3.0-or-later"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_discord_core = { path = "../hartex-discord-core", features = [
    "discord-model",
] }
hartex_discord_entitycache_macros = { path = "../hartex-discord-entitycache-macros", optional = true, default-features = false, features = [
    "discord_model_git",
] }

hartex_database_queries = { path = "../../database/hartex-database-queries" }

bb8 = "0.9.0"
tokio-postgres = "0.7.13"

[features]
derive = ["dep:hartex_discord_entitycache_macros"]
