[package]
name = "hartex_discord_internal_events"
version = "0.14.0"
edition = "2024"
description = """
Internal event payloads for the bot.
"""
license = "AGPL-3.0-or-later"
rust-version = "1.86.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
