[package]
name = "hartex_discord_leader"
version = "0.14.0"
edition = "2024"
description = """
The leader component of the bot.
"""
license = "AGPL-3.0-or-later"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_discord_core = { path = "../hartex-discord-core", features = [
    "async-runtime",
    "async-signal",
    "discord-model",
    "discord-gateway",
    "discord-gateway-enable-http",
    "environment",
] }

hartex_discord_utils = { path = "../../rust-utilities/hartex-discord-utils" }
hartex_kafka_utils = { path = "../../rust-utilities/hartex-kafka-utils" }
hartex_log = { path = "../../rust-utilities/hartex-log" }

futures-util = "0.3.31"
miette = { version = "7.5.0", features = ["fancy"] }
rdkafka = { version = "0.37.0", default-features = false, features = [
    "cmake-build",
    "external-lz4",
    "tokio",
] }
serde_json = "1.0.139"
serde_scan = "0.4.1"
tracing = { version = "0.1.41", features = ["log-always"] }

[features]
