[package]
name = "hartex_bitflags_utils"
version = "0.14.0"
edition = "2024"
description = """
Macro utilities
"""
license = "AGPL-3.0-or-later"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.9.0"

[features]
