[package]
name = "hartex_discord_utils"
version = "0.14.0"
edition = "2024"
description = """
Macro utilities
"""
license = "AGPL-3.0-or-later"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_discord_core = { path = "../../discord-frontend/hartex-discord-core", features = [
    "async-net",
    "async-runtime",
    "discord-http",
    "discord-model",
    "discord-util",
    "discord-util-builder",
] }

hartex_localization_core = { path = "../../localization/hartex-localization-core" }

async-once-cell = "0.5.4"
bb8-postgres = "0.9.0"
miette = "7.5.0"
tokio-postgres = "0.7.13"
tokio-rustls = { version = "0.26.1", features = ["ring"] }
unic-langid = "0.9.5"
webpki-roots = "0.26.8"

[features]
