[package]
name = "hartex_kafka_utils"
version = "0.14.0"
edition = "2024"
description = """
Macro utilities
"""
license = "AGPL-3.0-or-later"
rust-version = "1.86.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.37.0", default-features = false, features = ["cmake-build", "external-lz4", "tokio"] }

[features]
