[package]
name = "hartex-macro-utils"
version = "0.14.0"
edition = "2024"
description = "Macro facilities"
license = "AGPL-3.0-or-later"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.38"
syn = { version = "2.0.98", features = ["full"] }
