[package]
name = "hartex-reflect"
version = "0.14.0"
edition = "2024"
description = "Reimagining compile-time reflection"
license = "AGPL-3.0-or-later"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.19.1"

[package.metadata.rust-analyzer]
rustc_private = true
