[package]
name = "bootstrap"
version = "0.14.0"
edition = "2024"
description = """
Bootstrap binary
"""
license = "AGPL-3.0-or-later"
rust-version = "1.86.0"

[dependencies]
clap = { version = "4.5.24", default-features = false, features = ["std", "usage", "help", "derive", "error-context"] }
fd-lock = "4.0.2"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"

[[bin]]
name = "bootstrap"
path = "src/bin/main.rs"
