[package]
name = "bootstrap"
version = "0.14.0"
edition = "2024"
description = """
Bootstrap binary
"""
license = "AGPL-3.0-or-later"
rust-version = "1.87.0"

[dependencies]
clap = { version = "4.5.30", default-features = false, features = [
    "std",
    "usage",
    "help",
    "derive",
    "error-context",
] }
fd-lock = "4.0.2"
owo-colors = "4.1.0"
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"

[[bin]]
name = "bootstrap"
path = "src/bin/main.rs"
